# Graphics

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  WORKSPACE
cmake/modules/: FindGLFW3.cmake
include/: shader.hpp
resources/shaders/: oneTexture.fs  triangle.fs  triangle.vs  twoTextures.fs  twoTextures.vs
src/1.getting_started/: CMakeLists.txt  main.cpp
src/1.getting_started/1.1.hello_window/: BUILD  hello_window.cpp  hello_world.cpp  main.cpp
src/1.getting_started/1.2.hello_Triangle/: main.cpp
src/1.getting_started/1.3.hello_Texture/: main.cpp
src/1.getting_started/1.4.coordinate_Systems/: main.cpp
